Implemeting the structure of script file using the self invoking function

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    
+
 
     <div class="grid-container">
 
@@ -50,7 +50,7 @@
 
         <div class="input"> Total Salary : <input type="number" id="totalSalary" value="0" disabled />
         </div>
-        
+
         <div class="in-container">
 
             <h2>Employee List</h2>
@@ -75,7 +75,7 @@
 
     </div>
 
-    <script src="js/main.js"></script>
+    <script src="js/script.js"></script>
 
 </body>
 
