Fixed the totalSalary function and now it is sumed in the console

--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
 
       <form id="inputForm">
         <div class="in-container">
-          Name: <input type="text" id="name" class="display" /> Age:
-          <input type="number" id="age" class="display" /> Salary:
-          <input type="number" id="salary" class="display" /> Email:
-          <input type="email" id="email" class="display" />
+          Full Name: <input type="text" id="name" class="display" />
+          Age: <input type="number" id="age" class="display" /> 
+          Salary: <input type="number" id="salary" class="display" /> 
+          Email: <input type="email" id="email" class="display" />
         </div>
 
         <h2>Address data</h2>
 
         <div class="in-container">
-          Zip: <input type="number" id="zip" class="display" /> City:
-          <input type="text" id="city" class="display" /> Street:
-          <input type="text" id="street" class="display" /> Country:
-          <input type="text" id="country" class="display" /> P.O.Box:
-          <input type="number" id="pobox" class="display" />
+          Zip: <input type="number" id="zip" class="display" /> 
+          City: <input type="text" id="city" class="display" /> 
+          Street: <input type="text" id="street" class="display" /> 
+          Country: <input type="text" id="country" class="display" /> 
+          P.O.Box: <input type="number" id="pobox" class="display" />
         </div>
-
+        
         <input type="submit" value="submit" id="btn-submit" />
       </form>
 
